[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/background-dark.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/PixelFont.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Light/light_shape.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Default/bat_default.png" type="Texture" id=7]

[sub_resource type="Animation" id=2]
resource_name = "flap"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 78.7264, 296.333 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 5 )

[node name="LevelNode" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 508.149, 299.909 )
scale = Vector2( 0.201134, 0.201134 )
texture = ExtResource( 1 )

[node name="PlayerNode" type="Node2D" parent="Background"]
position = Vector2( -2053.6, -43.9219 )
scale = Vector2( 0.6743, 0.6743 )

[node name="Player" type="KinematicBody2D" parent="Background/PlayerNode"]
script = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="Background/PlayerNode/Player"]
position = Vector2( 546.142, 288.385 )
scale = Vector2( 4.30595, 4.3365 )
texture = ExtResource( 6 )
color = Color( 0.572549, 0.109804, 0.886275, 0.658824 )
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )

[node name="SpritePlayer" type="Sprite" parent="Background/PlayerNode/Player"]
light_mask = 2
position = Vector2( 526.647, 446.012 )
texture = ExtResource( 7 )
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/PlayerNode/Player"]
anims/flap = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Background/PlayerNode/Player"]

[node name="DetectInterractionsPolygon2" type="CollisionPolygon2D" parent="Background/PlayerNode/Player/Area2D"]
polygon = PoolVector2Array( 462.476, 304.594, 496.244, 448.477, 521.204, 482.246, 646.001, 491.055, 695.92, 439.668, 694.452, 275.229, 612.232, 363.322, 550.568, 342.767, 481.562, 285.507 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Background/PlayerNode/Player"]
polygon = PoolVector2Array( 452.198, 300.189, 499.181, 458.755, 522.672, 488.119, 651.874, 492.523, 698.856, 444.073, 691.515, 279.634, 622.51, 353.044, 553.504, 350.108, 500.649, 294.316 )

[node name="ObstaclesContainer" type="Node2D" parent="."]
position = Vector2( 1200, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ExitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
position = Vector2( -143.837, 295.167 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CurrentScoreLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -121.0
margin_top = -66.0416
margin_right = 53.0
margin_bottom = -26.0416
rect_pivot_offset = Vector2( -1479.35, 0 )
custom_fonts/font = SubResource( 4 )
text = "Current score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScoreLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -121.0
margin_top = -30.6864
margin_right = 53.0
margin_bottom = 9.3136
rect_pivot_offset = Vector2( -1479.35, 0 )
custom_fonts/font = SubResource( 4 )
text = "Best score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentScoreNumber" type="RichTextLabel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 4.5
margin_top = -74.0416
margin_right = 71.5
margin_bottom = -22.0416
rect_pivot_offset = Vector2( -1479.35, 0 )
custom_fonts/normal_font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScoreNumber" type="RichTextLabel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -19.6128
margin_top = -35.8578
margin_right = 47.3872
margin_bottom = 16.1422
rect_pivot_offset = Vector2( -1479.35, 0 )
custom_fonts/normal_font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelBoundaries" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LevelBoundaries"]
polygon = PoolVector2Array( -66.817, -63.4706, -78.1436, 699.18, 1099.81, 697.292, 1160.22, -99.3378, -69.1581, -63.347, -33.2909, -4.82681, 1058.28, -4.95041, 1035.63, 608.568, -15.8478, 618.007, -38.5377, 2.09724 )

[connection signal="area_entered" from="Background/PlayerNode/Player/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Background/PlayerNode/Player/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_spawn_Timer_timeout"]
[connection signal="body_entered" from="ExitArea" to="." method="_on_ExitArea_body_entered"]
[connection signal="body_entered" from="LevelBoundaries" to="." method="_on_LevelBoundaries_body_entered"]
